--- a/Practica3/memoria/bibliografia.bib
+++ b/Practica3/memoria/bibliografia.bib
@@ -55,3 +55,19 @@ volume = {36},
 journal = {Expert Syst. Appl.},
 doi = {10.1016/j.eswa.2007.12.047}
 }
+
+@Misc{cant,
+  author =   {Instituto Cántabro de Estadística},
+  title =    {Situación epidemiológica del Coronavirus (COVID-19) en Cantabria},
+  howpublished = {\url{https://www.icane.es/covid19/dashboard/incidence/home}},
+  month =    nov,
+  year =     2020
+}
+
+@Misc{cana,
+  author =   {Gobierno de Canarias},
+  title =    {COVID-19 Canarias},
+  howpublished = {\url{https://grafcan1.maps.arcgis.com/apps/opsdashboard/index.html#/156eddd4d6fa4ff1987468d1fd70efb6}},
+  month =    nov,
+  year =     2020
+}
